--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,7 +16,7 @@ find_package(Qt6 COMPONENTS
         REQUIRED)
 
 add_executable(client main.cpp src/MainWindow.cpp src/MainWindow.h src/client/ContactsPage.cpp src/client/ContactsPage.h src/client/ContactListItem.cpp src/client/ContactListItem.h src/client/ChatPage.cpp src/client/ChatPage.h src/client/AuthorizePage.cpp src/client/AuthorizePage.h src/DatabaseManager.cpp src/DatabaseManager.h src/client/NewsletterDialog.cpp src/client/NewsletterDialog.h src/client/RegistrationDialog.cpp src/client/RegistrationDialog.h src/ConnectionInfo.h)
-target_link_libraries(iMessage
+target_link_libraries(client
         Qt::Core
         Qt::Gui
         Qt::Widgets
